# MolTwister

./: .gitignore  CMakeLists.txt  CudaDefinitions.h  DefaultAtomicProperties.cpp  DefaultAtomicProperties.h  DefaultAtomicProperties_auto_cuda.cu  ExpLookup.cpp  ExpLookup.h  ExpLookup_auto_cuda.cu  INSTALL.txt  MolTwister.cpp  MolTwister.h  MolTwisterAtom.cpp  MolTwisterAtom.h  MolTwisterAtom_auto_cuda.cu  MolTwisterCommandPool.cpp  MolTwisterCommandPool.h  MolTwisterPythonExtensions.h  MolTwisterState.cpp  MolTwisterState.h  MolTwisterState_auto_cuda.cu  MolTwisterTutorialPool.cpp  MolTwisterTutorialPool.h  MolTwisterVariable.cpp  MolTwisterVariable.h  MolTwisterVariable_auto_cuda.cu  main.cpp
3DView/: MarchingCubes.cpp  MarchingCubes.h  MarchingCubes_auto_cuda.cu  MolTwister3DView.cpp  MolTwister3DView.h  MolTwister3DView_auto_cuda.cu  MolTwisterGLObject.cpp  MolTwisterGLObject.h  MolTwisterGLObject_auto_cuda.cu
Cmd/: MolTwisterCmd.cpp  MolTwisterCmd.h  MolTwisterCmdAdd.cpp  MolTwisterCmdAdd.h  MolTwisterCmdAutoscale.cpp  MolTwisterCmdAutoscale.h  MolTwisterCmdCalculate.cpp  MolTwisterCmdCalculate.h  MolTwisterCmdCd.cpp  MolTwisterCmdCd.h  MolTwisterCmdCopy.cpp  MolTwisterCmdCopy.h  MolTwisterCmdDcd.cpp  MolTwisterCmdDcd.h  MolTwisterCmdDel.cpp  MolTwisterCmdDel.h  MolTwisterCmdGauss9.cpp  MolTwisterCmdGauss9.h  MolTwisterCmdGenBonds.cpp  MolTwisterCmdGenBonds.h  MolTwisterCmdGet.cpp  MolTwisterCmdGet.h  MolTwisterCmdHoomdBlue.cpp  MolTwisterCmdHoomdBlue.h  MolTwisterCmdLammps.cpp  MolTwisterCmdLammps.h  MolTwisterCmdList.cpp  MolTwisterCmdList.h  MolTwisterCmdLl.cpp  MolTwisterCmdLl.h  MolTwisterCmdLoad.cpp  MolTwisterCmdLoad.h  MolTwisterCmdLs.cpp  MolTwisterCmdLs.h  MolTwisterCmdMeasure.cpp  MolTwisterCmdMeasure.h  MolTwisterCmdMmol.cpp  MolTwisterCmdMmol.h  MolTwisterCmdMod.cpp  MolTwisterCmdMod.h  (+14 more)
Cmd/MolTwisterCmdAdd/: CmdAtom.cpp  CmdAtom.h  CmdAtoms.cpp  CmdAtoms.h  CmdMDAngle.cpp  CmdMDAngle.h  CmdMDBond.cpp  CmdMDBond.h  CmdMDDihedral.cpp  CmdMDDihedral.h  CmdMDNonBonded.cpp  CmdMDNonBonded.h
Cmd/MolTwisterCmdCalculate/: CmdCOM.cpp  CmdCOM.h  CmdDensityMap.cpp  CmdDensityMap.h  CmdDensityProfile.cpp  CmdDensityProfile.h  CmdDihedralDistr.cpp  CmdDihedralDistr.h  CmdDihedralDistrCOM.cpp  CmdDihedralDistrCOM.h  CmdDipMom.cpp  CmdDipMom.h  CmdDipMomPerturbCharge.cpp  CmdDipMomPerturbCharge.h  CmdDipMomPerturbZPos.cpp  CmdDipMomPerturbZPos.h  CmdDipMomPerturbZPosExchange.cpp  CmdDipMomPerturbZPosExchange.h  CmdDipMomProfile.cpp  CmdDipMomProfile.h  CmdDistProbabilityCOM.cpp  CmdDistProbabilityCOM.h  CmdEnergyBetween.cpp  CmdEnergyBetween.h  CmdEnergyOfTranslation.cpp  CmdEnergyOfTranslation.h  CmdFFT.cpp  CmdFFT.h  CmdForceBetween.cpp  CmdForceBetween.h  CmdHBondCount.cpp  CmdHBondCount.h  CmdLoading.cpp  CmdLoading.h  CmdMSD.cpp  CmdMSD.h  CmdPairCorrelation.cpp  CmdPairCorrelation.h  CmdPotenEnergyMap.cpp  CmdPotenEnergyMap.h  (+8 more)
Cmd/MolTwisterCmdDcd/: CmdAtomicUnwrap.cpp  CmdAtomicUnwrap.h  CmdFromXTC.cpp  CmdFromXTC.h  CmdHeader.cpp  CmdHeader.h  CmdNumCoordinates.cpp  CmdNumCoordinates.h  CmdNumRecords.cpp  CmdNumRecords.h  CmdReadCoordinate.cpp  CmdReadCoordinate.h  CmdReadRecord.cpp  CmdReadRecord.h  CmdUnwrap.cpp  CmdUnwrap.h  CmdWrap.cpp  CmdWrap.h
Cmd/MolTwisterCmdMeasure/: CmdAngle.cpp  CmdAngle.h  CmdAtomPos.cpp  CmdAtomPos.h  CmdBondCount.cpp  CmdBondCount.h  CmdBondLength.cpp  CmdBondLength.h  CmdBondLengthDyn.cpp  CmdBondLengthDyn.h  CmdBondSep.cpp  CmdBondSep.h  CmdCenter.cpp  CmdCenter.h  CmdCharge.cpp  CmdCharge.h  CmdCoulombEnergy.cpp  CmdCoulombEnergy.h  CmdCoulombPotential.cpp  CmdCoulombPotential.h  CmdCount.cpp  CmdCount.h  CmdDihedral.cpp  CmdDihedral.h  CmdOverlap.cpp  CmdOverlap.h  CmdPBC.cpp  CmdPBC.h  CmdRadiusOfGyration.cpp  CmdRadiusOfGyration.h
Cmd/MolTwisterCmdMod/: CmdAngle.cpp  CmdAngle.h  CmdAtomName.cpp  CmdAtomName.h  CmdAtomPos.cpp  CmdAtomPos.h  CmdBondLength.cpp  CmdBondLength.h  CmdBondType.cpp  CmdBondType.h  CmdCharge.cpp  CmdCharge.h  CmdDefaultAtomProps.cpp  CmdDefaultAtomProps.h  CmdDihedral.cpp  CmdDihedral.h  CmdMass.cpp  CmdMass.h  CmdMobillity.cpp  CmdMobillity.h  CmdResname.cpp  CmdResname.h  CmdRotateSel.cpp  CmdRotateSel.h  CmdSigma.cpp  CmdSigma.h  CmdUserDefPBC.cpp  CmdUserDefPBC.h
Cmd/MolTwisterCmdMolDyn/: CmdCfg.cpp  CmdCfg.h  CmdCudaTest.cpp  CmdCudaTest.h  CmdFF.cpp  CmdFF.h  CmdOptimizeEnergy.cpp  CmdOptimizeEnergy.h  CmdResetGPU.cpp  CmdResetGPU.h  CmdRun.cpp  CmdRun.h
Cmd/Tools/: CudaDeviceList.cu  CudaDeviceList.h  DCDTools.cpp  DCDTools.h  MolTwisterCmdEntry.cpp  MolTwisterCmdEntry.h  MolTwisterCmdParser.cpp  MolTwisterCmdParser.h  MolTwisterStateTools.cpp  MolTwisterStateTools.h  MolTwisterStateTools_auto_cuda.cu  MolecularSystemTools.cpp  MolecularSystemTools.h  MolecularSystemTools_auto_cuda.cu  MolecularTools.cpp  MolecularTools.h  MolecularTools_auto_cuda.cu  ParsingTools.cpp  ParsingTools.h  ProgressBar.cpp  ProgressBar.h  ToolsBase.cpp  ToolsBase.h
MDFF/: MolTwisterMDFFCoulomb.cpp  MolTwisterMDFFCoulomb.h  MolTwisterMDFFList.cpp  MolTwisterMDFFList.h  MolTwisterMDFFList_auto_cuda.cu
MDFF/Angles/: MolTwisterMDFFAngle.cpp  MolTwisterMDFFAngle.h  MolTwisterMDFFAngleList.cpp  MolTwisterMDFFAngleList.h  MolTwisterMDFFAngleList_auto_cuda.cu  MolTwisterMDFFAngle_Class2.cpp  MolTwisterMDFFAngle_Class2.h  MolTwisterMDFFAngle_Class2_auto_cuda.cu  MolTwisterMDFFAngle_Harm.cpp  MolTwisterMDFFAngle_Harm.h  MolTwisterMDFFAngle_Harm_auto_cuda.cu  (+1 more)
RestAPI/: MolTwisterRestAPI.cpp  MolTwisterRestAPI.h
Tutorials/: water_simulation.md
Utilities/: 3DBasis.cpp  3DBasis.h  3DBasis_auto_cuda.cu  3DRect.cpp  3DRect.h  3DRect_auto_cuda.cu  3DVector.cpp  3DVector.h  3DVector_auto_cuda.cu  ASCIIUtility.cpp  ASCIIUtility.h  BashColor.cpp  BashColor.h  CUDAGeneralizations.h  ConditionalOnXYZ.cpp  ConditionalOnXYZ.h  DCDFile.cpp  DCDFile.h  DCDFile_auto_cuda.cu  FFT1D.cpp  FFT1D.h  FileUtility.cpp  FileUtility.h  LennardJonesUnits.cpp  LennardJonesUnits.h  MolDB.cpp  MolDB.h  Serializer.h  Serializer_auto_cuda.cu  UniqueNumberGen.cpp  UniqueNumberGen.h  XTCFile.h
debian/: changelog  control  copyright  rules
(+97 files in other folders)
